# tests

kafkatest/: docker-compose.yml
kafkatest/go/: consumer.go  go.mod  go.sum  main.go  producer.go  types.go
kafkatest/rust/: Cargo.toml
kafkatest/rust/src/: consumer.rs  main.rs  producer.rs  types.rs
rabbitmqtest/: docker-compose.yml
rabbitmqtest/go/: main.go  rabbitmq.go  types.go
rabbitmqtest/rust/: Cargo.toml
rabbitmqtest/rust/src/: main.rs  models.rs  rabbitmq.rs
rust-test/: .env  Cargo.toml  docker-compose.yaml
rust-test/db/: init.sql
rust-test/src/: db.rs  main.rs
rust-test/src/models/: products.rs  user.rs
rust-test/src/routes/: products.rs  users.rs
