[package]
name = "rust-test"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
axum = "0.8.4"
tokio = {version = "1.47.1", features = ["full"]}
serde = {version ="1.0.219", features = ["derive"]}
serde_json = "1.0.143"
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio", "macros"]}
dotenv = "0.15.0"
